# go1_navigation

./: CMakeLists.txt  package.xml
config/: common_costmap_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  odom_params.yaml  planners_params.yaml
launch/: cam_receiver.launch  cam_sender.launch  go1_navigation.launch  nimbro_pilot.launch  nimbro_receiver.launch  nimbro_robot.launch  nimbro_sender.launch  pilot_navigation.launch  robot_navigation.launch
maps/: empty.yaml  lab_1.yaml  lab_complete.yaml  outdoor_fiumara.yaml  space_lab.yaml
params/: local_costmap_params.yaml  navsat_transform_params.yaml  planners_params.yaml
params/nimbro/: services.yaml  services_pilot.yaml  services_robot.yaml  topics.yaml  topics_pilot.yaml  topics_robot.yaml
params/rslidar/: config.yaml
rviz/: go1_nav.rviz
scripts/: gnss.py  mavgps.py  rslidar_ns.py
