<?xml version="1.0"?>
<package format="2">
  <name>go1_navigation</name>
  <version>0.0.0</version>
  <description>The go1_navigation package</description>


  <maintainer email="frollo@todo.todo">frollo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
